--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script type="text/javascript" src="js/levels/11tunnel.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
     <div class="info">
-      <h1>Mario</h1>
+      <h1>Mario Elsa</h1>
       <p class="controls">Move: Arrow Keys, Jump: X, Run: Z</p>
     </div>
   </body>
